updated Java to version 8